tests/src/frontend/syntax/invalid/invalid_pattern3.sk

fun test(): void {
   x match { 0 }
}
